unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Actual_Duration__c</fullName>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>