unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__AR_Term__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__AR_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>ia_crm__AR_Terms__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>