unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Begin_Date__c</fullName>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>