unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Bill_to__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>