unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Complete_by_Duration__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Complete_by_Duration__c</fullName>
    <label>% Complete by Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>