unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_Amount__c</fullName>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>