unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Currency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Currency__c</fullName>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>