unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Description__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>