unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Duplicate__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Duplicate__c</fullName>
    <formula>ia_crm__Project_Template__r.ia_crm__Is_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>