unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Intacct_Location__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Location</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Projects (Intacct Location)</relationshipLabel>
    <relationshipName>ProjectLocation</relationshipName>
    <type>Lookup</type>
</CustomField>