unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>