unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>