unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__P_O_Number__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__P_O_Number__c</fullName>
    <label>P.O. Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>