unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Project_Category__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_Category__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
                <default>true</default>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Capitalized</fullName>
            </value>
            <value>
                <fullName>Internal Non-Billable</fullName>
            </value>
            <value>
                <fullName>Internal Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>