unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Project_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_ID__c</fullName>
    <label>Intacct Project ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>