unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_Manager__c</fullName>
    <label>Project Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>