unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Project_Status_List__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_Status_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Status</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ia_crm__Project_Status__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Project_Status__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>