unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Project_Template__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <referenceTo>ia_crm__Project__c</referenceTo>
    <relationshipLabel>Projects (Project Template)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>