unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Service_Budget__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Service_Budget__c</fullName>
    <label>Service Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>