unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Status__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>