unpackaged/main/default/objects/ia_crm__Project__c/fields/ia_crm__Term__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Term__c</fullName>
    <description>This is a standard field in Accounts Receivable in Intacct, the picklist values must match exactly the name of the terms available in Intacct to map.</description>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>