unpackaged/main/default/objects/ia_crm__Project__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Project_ID__c</columns>
    <columns>ia_crm__Is_Template__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ia_crm__Intacct_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>