unpackaged/main/default/objects/ia_crm__Project__c/listViews/ia_crm__only_specifics.listView-meta.xml
<ListView>
    <fullName>ia_crm__only_specifics</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>8</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>9</value>
    </filters>
    <label>only specifics</label>
</ListView>